@@ -83,7 +83,7 @@
     </dependencies>
     <build>
         <plugins>
-            <!-- <plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
@@ -91,9 +91,10 @@
                      <includes>
                        <include>${acceptanceSourceDirectory}/java/**/*Test.java</include>
                     </includes>  
-                    <useSystemClassLoader>false</useSystemClassLoader>
+                    <forkCount>0</forkCount>
+        			<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                 </configuration>
-            </plugin> -->
+            </plugin>
             
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
